--- a/personal-card/styles.css
+++ b/personal-card/styles.css
@@ -9,7 +9,8 @@
 :root {
     --black-color: rgb(20, 20, 20);
     --dark-grey-color: rgb(29, 29, 29);
-    --grey-color: rgb(45, 45, 45);
+    --grey-background-color: rgb(43, 43, 43);
+    --grey-text-color: rgb(124, 124, 124);
     --white-text-color: rgb(255, 255, 255);
     --accent-color: rgb(184, 209, 101);
 }
@@ -33,5 +34,55 @@ body{
 
 .main-container{
     background-color: var(--dark-grey-color);
+    text-align: center;
+    padding: 2rem 1rem;
+    border-radius: 10px; 
+}
+
+.img-container{
+    width: 4rem;
+    height: 4rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;    
+}
+
+.img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.name-location{
+    color: var(--white-text-color);
+    margin-bottom: 1rem;
+}
+
+.name-location *:nth-child(1){
+    font-weight: 400;
+    letter-spacing: 1.5px;
+}
+
+.name-location *:nth-child(2){
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: var(--accent-color);
+}
+
+.slogan{
+    color: var(--grey-text-color);
+    margin-bottom: 1rem;
+}
+
+.social-links .link{
+    list-style: none;
+    width: 100%;
+    background-color: var(--grey-background-color);
+    padding: 0.5rem 0;
+    color: var(--white-text-color);
+    font-weight: 600;
+    letter-spacing: 1px;
+    border-radius: 5px;
+    font-size: 0.8rem;
 }
 
