--- a/personal-card/styles.css
+++ b/personal-card/styles.css
@@ -84,5 +84,10 @@ body{
     letter-spacing: 1px;
     border-radius: 5px;
     font-size: 0.8rem;
+    margin-bottom: 1rem;
+}
+
+.social-links .link:last-child{
+    margin-bottom: 0;
 }
 
