--- a/personal-card/styles.css
+++ b/personal-card/styles.css
@@ -36,7 +36,8 @@ body{
     background-color: var(--dark-grey-color);
     text-align: center;
     padding: 2rem 1rem;
-    border-radius: 10px; 
+    border-radius: 10px;
+    width: 100%; 
 }
 
 .img-container{
@@ -93,5 +94,7 @@ body{
 }
 
 @media screen and (min-width: 1000px) {
-    
+    .main-container{
+        width: fit-content;
+    }
 }
