--- a/faq-accordion/styles.css
+++ b/faq-accordion/styles.css
@@ -9,9 +9,17 @@
     font-style: normal;
     font-weight: 100 700;
     src: url("./assets/material-symbols/material-symbols-rounded.woff2") format('woff2');
-  }
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url("./assets/fonts/poppins-fonts.woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
   
-  .material-symbols-rounded {
+.material-symbols-rounded {
     font-family: 'Material Symbols Rounded';
     font-weight: normal;
     font-style: normal;
@@ -25,4 +33,11 @@
     direction: ltr;
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
-  }
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', Arial, sans-serif;
+}
