--- a/faq-accordion/styles.css
+++ b/faq-accordion/styles.css
@@ -2,6 +2,7 @@
     --dark-purple: rgb(40, 23, 45);
     --purple-accent: rgb(150, 49, 228);
     --text-color: rgb(43, 26, 48);
+    --rose-color: rgb(245, 236, 254);
 }
 
 @font-face {
@@ -40,4 +41,21 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', Arial, sans-serif;
+}
+
+.main-container{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--rose-color);
+    position: relative;
+}
+
+.main-container::before{
+    content: "";
+    width: 100%;
+    height: 33%;
+    background-color: var(--dark-purple);
+    position: absolute;
+    top: 0;
+    left: 0;
 }
