--- a/faq-accordion/styles.css
+++ b/faq-accordion/styles.css
@@ -75,6 +75,7 @@ ul li{
     background-color: var(--container-color);
     border-radius: 10px;
     z-index: 10;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .content-container .title-icon{
