--- a/faq-accordion/styles.css
+++ b/faq-accordion/styles.css
@@ -128,3 +128,8 @@ ul li{
 .closed{
     display: none;
 }
+@media screen and (min-width: 1000px) {
+    .content-container{
+        width: 600px;
+    }
+}
